# potree_rviz_plugin

./: .travis.yml  README.rst
fkie_potree_rviz_plugin/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin.xml
fkie_potree_rviz_plugin/ogre_media/materials/scripts/: potree.program  potree_circle.frag  potree_color.vert  potree_point.material  potree_quad.geom  potree_splat.fs  potree_splat.material  potree_splat.program  potree_splat.vs
fkie_potree_rviz_plugin/src/: cloud_loader.cpp  cloud_loader.h  cloud_loader_1.cpp  cloud_loader_1.h  cloud_loader_2.cpp  cloud_loader_2.h  cloud_meta_data.cpp  cloud_meta_data.h  fs_path_editor.cpp  fs_path_editor.h  fs_path_property.cpp  fs_path_property.h  loading_thread.cpp  loading_thread.h  potree_display.cpp  potree_display.h  potree_node.cpp  potree_node.h  potree_visual.cpp  potree_visual.h  priority_queue.h
