<?xml version="1.0"?>
<package format="2">
  <name>fkie_potree_rviz_plugin</name>
  <version>1.0.0</version>
  <description>Render large point clouds in rviz</description>

  <maintainer email="timo.roehling@fkie.fraunhofer.de">Timo Röhling</maintainer>
  <author email="timo.roehling@fkie.fraunhofer.de">Timo Röhling</author>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>rviz</depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libjsoncpp-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>
  <exec_depend>media_export</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin.xml" />
    <media_export ogre_media_path="${prefix}/ogre_media/materials/scripts" />
  </export>
</package>
